# ai-agent

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
docs/: ISSUE_TEMPLATE.md  phase1-github-issues-plan.md  phase1-system-interaction-plan.md
docs/issues/phase1/: 01-create-github-labels-for-difficulty-and-categories.md  01-define-phase-1-actor-model-and-end-to-end-flow.md  02-add-issue_template.md-for-phase-1-issues.md  02-implement-terminal-input-contract-for-step-0.md  03-build-step-1-llm-prompt-wrapper-with-tool-constraints.md  03-define-phase-1-scope-and-non-goals-document.md  04-implement-minimal-cli-prompt-input-handling.md  04-integrate-http-transport-for-program-to-llm-call.md  05-add--help-and-usage-output.md  05-handle-api-key-and-auth-headers-for-llm-calls.md  06-add--version-output-and-semantic-version-placeholder.md  06-parse-step-2-llm-json-response-into-tool-request.md  07-enforce-phase-1-single-tool-call-rule.md  07-integrate-http-client-dependency-for-llm-calls.md  08-add-json-serialization-and-parsing-dependency.md  08-implement-tool-allowlist-and-dispatcher-for-step-3.md  09-implement-llm-request-builder.md  09-implement-runcommand-executor-with-output-capture.md  10-add-environment-variable-loading-for-api-key.md  10-implement-readfile-executor-for-step-3.md  11-implement-listdirectory-executor-for-step-3.md  11-implement-llm-response-parser-for-tool-call-extraction.md  12-add-command-safety-guardrails-in-executor-layer.md  12-enforce-exactly-one-tool-call.md  13-implement-tool-dispatcher-with-strict-allowlist.md  13-standardize-tool-execution-result-envelope.md  14-implement-optional-step-4-tool-output-to-llm-summarization.md  (+13 more)
src/: CMakeLists.txt  Main.cpp  RequestBuilder.cpp  RequestBuilder.hpp  StringUtils.hpp
src/exception/: ParsePromptError.hpp
src/utils/: PlatformUtils.cpp  PlatformUtils.hpp  PromptUtils.cpp  PromptUtils.hpp  StringUtils.cpp  StringUtils.hpp
tests/: CMakeLists.txt  PromptUtilsTest.cpp  RequestBuilderTest.cpp
